<resources>
    <string name="app_name">Ninja Run</string>
    <string name="profile">Profile</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_demo">DemoActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="start_run">Start Run</string>
    <string name="stop_run">Stop Run</string>
    <string name="profile_button">profile button</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Route page -->
    <string name="distance_string">%1$.1f miles</string>


    <!--Side Bar Menu -->
    <string name="log_out">Log Out</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="shared_routes">Shared Routes</string>
    <string name="my_history">My History</string>
    <string name="map">Map</string>
    <string name="nav_profile">Profile</string>
    <string name="search">Search</string>


    <!-- Search Page -->

    <string-array name="searchBy_array">
        <item>Town</item>
        <item>Route ID</item>
        <item>Username</item>
        <item>Route Name</item>
    </string-array>

    <!-- searchedRoute item -->
    <string name="route_id">Route id: %1$d</string>
    <string name="creator">Creator: %1$s</string>
    <string name="town">Town: %1$s</string>
    <string name="length">Length: %1$.1f miles</string>
    <string name="no_routes_found">No Routes Found!</string>
    <string name="no_name_given">No Name Given : (</string>


    <!-- page titles -->
    <string name="map_title">Map</string>
    <string name="profile_title">Profile</string>
    <string name="search_title">Search for Routes</string>
    <string name="history_title">My Running History</string>
    <string name="shared_title">Routes Shared With Me</string>
    <string name="follower_title">My Followers</string>
    <string name="following_title">Following Me</string>
    <string name="edit_profile_title">Edit Profile</string>
    <string name="route_creator">Creator: %1$s</string>

    <!-- History Page -->
    <string name="history_date">Date: %1$s</string>
    <string name="history_calories">Calories: %1$d</string>
    <string name="history_duration">Duration: %1$d min %2$d sec</string>
    <string name="history_distance">Distance: %1$.1f miles</string>
    <string name="history_route_id">Route ID: %1$d</string>
    <string name="history_town">Town: %1$s</string>
    <string name="history_route_name">No Route Name</string>
    <string name="no_history">No running history yet!</string>
    <string name="no_shared_routes">No shared routes yet. Check back soon!</string>
    <string name="follow_button">Follow</string>
    <string name="shared_by">Shared by: %1$s</string>
    <string name="date_created">Created: %1$s</string>


</resources>