<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_account_box"
            android:title="@string/nav_profile" />

        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_baseline_map_24"
            android:title="@string/map" />

        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_baseline_search_24"
            android:title="@string/search" />

        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_baseline_history_24"
            android:title="@string/my_history" />

        <item
            android:id="@+id/nav_shared"
            android:icon="@drawable/ic_baseline_shared"
            android:title="@string/shared_routes" />
        <item
            android:id="@+id/nav_following"
            android:icon="@android:drawable/ic_input_get"
            android:title="@string/following" />
        <item
            android:id="@+id/nav_followers"
            android:icon="@android:drawable/ic_menu_view"
            android:title="@string/followers" />

        <item
            android:id="@+id/nav_logOut"
            android:icon="@drawable/ic_baseline_login_24"
            android:title="@string/log_out" />

    </group>


</menu>